# robot-x

./: .gitignore  README.md
docker/: Dockerfile  bash_aliases  requirements.txt
robot_ws/src/: dltme.txt
robot_ws/src/robotx_ctrl/: package.xml  setup.cfg  setup.py
robot_ws/src/robotx_ctrl/config/: arm_config_params.yaml  arm_ctrl_params.yaml  params.yaml
robot_ws/src/robotx_ctrl/robotx_ctrl/: BuzzerNode.py  GripperNode.py  arm_ctrl_params.py  arm_node.py  arm_param_srv_cte.py  buzzer_node.py  robotx_params.py
robot_ws/src/robotx_ctrl/robotx_ctrl/Arm_Lib/: Arm_Lib.py  __init__.py
robot_ws/src/robotx_interfaces/: CMakeLists.txt  package.xml
robot_ws/src/robotx_interfaces/msg/: Buzzer.msg
